# dev-trace

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  decisiontrees.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
Formula/: devtrace.rb
devtrace/: __init__.py  cli.py  git_metrics.py  ml.py  runner.py  server.py  storage.py  sync.py  types.py  utils.py
devtrace/ml/: __init__.py  constants.py  dataset.py  featurization.py  runtime.py  schemas.py  scoring.py  synthetic.py  training.py
devtrace/models/: __init__.py  entities.py  enums.py
devtrace/utils/: __init__.py
docs/: PTTY.md  release.md
packaging/homebrew/: devtrace.rb
tests/: test_git_metrics.py  test_ml.py  test_runner.py  test_storage.py
