[project]
name = "devtrace"
version = "0.1.0"
description = "Local-first provenance tracker for developer and agent activity"
requires-python = ">=3.11"
authors = [{ name = "DevTrace Team" }]
dependencies = [
    "typer[all]>=0.9",
    "rich>=13.7",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[project.scripts]
devtrace = "devtrace.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
