[project]
name = "devtrace"
version = "0.2.0"
description = "Local-first provenance tracker for developer and agent activity"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DevTrace Team" }]
keywords = ["cli", "developer-tools", "observability", "telemetry", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer[all]>=0.9",
    "rich>=13.7",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]
ml = [
    "xgboost>=2.0",
]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
data = [
    "pandas>=2.2",
    "pyarrow>=16.0",
]

[project.scripts]
devtrace = "devtrace.cli:app"

[project.urls]
Homepage = "https://github.com/gupta799/dev-trace"
Repository = "https://github.com/gupta799/dev-trace"
Issues = "https://github.com/gupta799/dev-trace/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["devtrace*"]
